Bug 1188322 - Always hide menubar as well as dock for fullscreen on OS X whatever the screen is. r=mstange