widget/cocoa/nsCocoaUtils.mm
@@ -234,33 +234,20 @@ void nsCocoaUtils::GetScrollingDeltas(NSEvent* aEvent, CGFloat* aOutDeltaX, CGFl
   *aOutDeltaY = [aEvent deltaY] * lineDeltaPixels;
 }
 
-void nsCocoaUtils::HideOSChromeOnScreen(bool aShouldHide, NSScreen* aScreen)
+void nsCocoaUtils::HideOSChromeOnScreen(bool aShouldHide)
 {
   NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
 
   // Keep track of how many hiding requests have been made, so that they can
   // be nested.
-  static int sMenuBarHiddenCount = 0, sDockHiddenCount = 0;
+  static int sHiddenCount = 0;
 
-  // Always hide the Dock, since it's not necessarily on the primary screen.
-  sDockHiddenCount += aShouldHide ? 1 : -1;
-  NS_ASSERTION(sMenuBarHiddenCount >= 0, "Unbalanced HideMenuAndDockForWindow calls");
+  sHiddenCount += aShouldHide ? 1 : -1;
+  NS_ASSERTION(sHiddenCount >= 0, "Unbalanced HideMenuAndDockForWindow calls");
 
-  // Only hide the menu bar if the window is on the same screen.
-  // The menu bar is always on the first screen in the screen list.
-  if (aScreen == [[NSScreen screens] objectAtIndex:0]) {
-    sMenuBarHiddenCount += aShouldHide ? 1 : -1;
-    NS_ASSERTION(sDockHiddenCount >= 0, "Unbalanced HideMenuAndDockForWindow calls");
-  }
-
-  NSApplicationPresentationOptions options;
-  if (sMenuBarHiddenCount > 0) {
-    options = NSApplicationPresentationHideDock | NSApplicationPresentationHideMenuBar;
-  } else if (sDockHiddenCount > 0) {
-    options = NSApplicationPresentationHideDock;
-  } else {
-    options = NSApplicationPresentationDefault;
-  }
+  NSApplicationPresentationOptions options =
+    sHiddenCount <= 0 ? NSApplicationPresentationDefault :
+    NSApplicationPresentationHideDock | NSApplicationPresentationHideMenuBar;
   [NSApp setPresentationOptions:options];
 
   NS_OBJC_END_TRY_ABORT_BLOCK;
